--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,8 +20,12 @@
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "cypress": "^9.1.1",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "local-cypress": "^1.2.3",
+    "postinstall-postinstall": "^2.1.0",
+    "start-server-and-test": "^1.14.0",
     "typescript": "4.5.3"
   }
 }
