Configure github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
-name: ci
-# https://docs.github.com/en/actions/reference/events-that-trigger-workflows
+name: CI
+
+# Controls when the workflow will run
 on: [deployment_status]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   e2e:
     # only runs this job on successful deploy
