Added unit tests

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test start http://localhost:3000 cypress",
@@ -18,13 +20,19 @@
     "react-icons": "4.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.2.1",
     "@types/node": "16.11.15",
     "@types/react": "17.0.37",
+    "@types/testing-library__jest-dom": "^5.14.2",
     "cypress": "9.2.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
     "local-cypress": "1.2.3",
     "postinstall-postinstall": "2.1.0",
+    "react-test-renderer": "^17.0.2",
     "start-server-and-test": "1.14.0",
     "typescript": "4.5.4"
   }
