--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,25 @@
 {
-    "window.title": "${activeEditorShort}${separator}${rootName} ${separator} [Branch: main]"
+  "files.trimTrailingWhitespace": true,
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "editor.formatOnType": true,
+  "editor.formatOnSave": true,
+  "[html]": {
+    "editor.formatOnSave": false
+  },
+  "eslint.enable": true,
+  "eslint.packageManager": "yarn",
+  "eslint.trace.server": "off",
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
+  "typescript.tsserver.maxTsServerMemory": 2048,
+  "typescript.tsserver.useSyntaxServer": "always",
+  "typescript.tsserver.trace": "off",
+  "typescript.format.enable": false,
+  "javascript.format.enable": false,
+  "[json]": {
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+  }
 }
