--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test start http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -29,9 +31,14 @@
     "cypress": "9.2.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.4.5",
+    "lint-staged": "^12.1.3",
     "local-cypress": "1.2.3",
     "postinstall-postinstall": "2.1.0",
+    "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
     "start-server-and-test": "1.14.0",
     "typescript": "4.5.4"
